--- a/ner.ipynb
+++ b/ner.ipynb
@@ -6,6 +6,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Extracting text from round 800 resumes \n",
+    "import os\n",
+    "from pypdf import PdfReader\n",
+    "from docx import Document\n",
+    "\n",
+    "\n",
+    "directory = 'all resumes'\n",
+    "\n",
+    "output_file_path = 'extracted_resumes.txt'\n",
+    "\n",
+    "with open(output_file_path, 'w', encoding='utf-8') as output_file:\n",
+    "    \n",
+    "    for filename in os.listdir(directory):\n",
+    "        file_path = os.path.join(directory, filename)\n",
+    "\n",
+    "        \n",
+    "        if filename.endswith('.pdf'):\n",
+    "            pdf_reader = PdfReader(file_path)\n",
+    "           \n",
+    "            for pdf_page in pdf_reader.pages:\n",
+    "                output_file.write(pdf_page.extract_text() )\n",
+    "          \n",
+    "\n",
+    "        \n",
+    "        elif filename.endswith('.docx'):\n",
+    "            doc = Document(file_path)\n",
+    "            for paragraph in doc.paragraphs:\n",
+    "                output_file.write(paragraph.text)\n",
+    "            \n",
+    "print(output_file_path)\n",
+    "print(f\"Extracted content saved to {output_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Training Model using data that we extracted from pdfs and docx \n",
+    "\n",
     "import json\n",
     "import spacy\n",
     "from spacy.training.example import Example\n",
@@ -91,6 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Testing the trained model\n",
     "import spacy\n",
     "from sklearn.metrics import precision_recall_fscore_support\n",
     " \n",
@@ -98,7 +140,6 @@
     "model_output_path = \"/content/drive/MyDrive/saved ner\"  # Adjust to your model path\n",
     "nlp = spacy.load(model_output_path)\n",
     " \n",
-    "# Prepare to collect predictions and true values\n",
     "y_true = []\n",
     "y_pred = []\n",
     " \n",
@@ -106,13 +147,13 @@
     "for text, annotations in test_data:\n",
     "    doc = nlp(text)\n",
     " \n",
-    "    # Get predicted entities\n",
+    "    \n",
     "    predicted_entities = [(ent.start_char, ent.end_char, ent.label_) for ent in doc.ents]\n",
     "   \n",
-    "    # Prepare true entities\n",
+    "\n",
     "    true_entities = [(ent[0], ent[1], ent[2]) for ent in annotations['entities']]\n",
     "   \n",
-    "    # Append true and predicted entities\n",
+    "\n",
     "    y_true.extend([label for _, _, label in true_entities])\n",
     "    y_pred.extend([label for _, _, label in predicted_entities])\n",
     "   \n",
@@ -141,6 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Finally checking how much our trained model is working\n",
     "import spacy\n",
     "from pypdf import PdfReader\n",
     "from docx import Document\n",
@@ -190,8 +232,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
